Tue Jun 05 10:54:13 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/brass/,backends/chert/: After closing the database, methods
	  which try to use the termlist would throw FeatureUnavailableError
	  with message "Database has no termlist", assuming that the termlist
	  table not being open meant it wasn't present.  Fix to check if the
	  postlist_table is open to determine which case we're in.
	* tests/api_closedb.cc: Improve test coverage for closed databases.
	  (ticket#337)

Tue Jun 05 10:31:33 GMT 2012  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* HACKING: Update Debian/Ubuntu packaging instructions.
	* HACKING: freshmeat -> freecode.

Wed May 30 01:12:06 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/chert/chert_cursor.cc: Fix incorrect use of "delete" to
	  "delete []".  The type is POD, so I suspect this mistake didn't
	  actually cause any problems, and it only happens when a cursor
	  gets rebuilt because the B-tree has gained a level, so it's
	  a rather rare occurrence.
	* backends/brass/brass_cursor.cc,backends/flint/flint_cursor.cc: Make
	  the equivalent fix.

Tue May 15 11:09:44 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/query.h: Fix Query ctor documentation comment - XOR
	  and ELITE_SET can both take any number of subqueries, not just
	  exactly two.

Fri May 18 22:48:53 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/positioniterator.h,include/xapian/postingiterator.h,
	  include/xapian/termiterator.h: Backport missing documentation
	  comments for API operator++ and operator* methods.

Wed May 09 11:47:04 GMT 2012  Olly Betts <olly@survex.com>

	* AUTHORS: Update for people who contributed to 1.2.10.

Wed May 09 10:41:57 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.10.

Wed May 09 08:09:10 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.
